--- a/css/style.css
+++ b/css/style.css
@@ -142,9 +142,13 @@ h5 {
 }
 
 .ferramentas p {
-    padding: 0 15px 30px;
+    padding: 0 10px 30px;
     font-size: 14px;
     margin: 0;
+}
+
+.ferramentas-copy {
+    margin-top: 150px;
 }
 
 .cards-ferramentas {
@@ -152,6 +156,7 @@ h5 {
     margin: 0 50px 30px;
     transition: all ease 0.5s;
     border-radius: 2px;
+    position: relative;
 }
 
 .ferramentas-image {
@@ -161,9 +166,11 @@ h5 {
     border-radius: 50px;
     transition: all ease 0.5s;
     margin: 30px 0;
+    position: absolute;
+    top: 0;
 }
 
-.cards-ferramentas svg {
+.cards-ferramentas svg {    
     width: 60px;
     height: 60px;
 }
