--- a/css/style.css
+++ b/css/style.css
@@ -142,13 +142,14 @@ h5 {
 }
 
 .ferramentas p {
-    padding: 0 10px 30px;
+    padding: 0 10gpx 30px;
     font-size: 14px;
     margin: 0;
 }
 
 .ferramentas-copy {
     margin-top: 150px;
+    margin-bottom: 30px;
 }
 
 .cards-ferramentas {
@@ -190,10 +191,10 @@ h5 {
 }
 
 .cards-ferramentas:hover .path1 {
-    animation: animate-svg 2s linear forwards;
+    animation: animate-svg 1s linear forwards;
 }
 .cards-ferramentas:hover .path2 {
-    animation: animate-svg-2 2s linear forwards;
+    animation: animate-svg-2 1s linear forwards;
 }
 
 @keyframes animate-svg {
@@ -342,12 +343,20 @@ h5 {
 
 @media screen and (max-width: 770px) {
     .cards-ferramentas {
-        width: 100px;
+        width: 100px;        
     }
     .cards-ferramentas:hover {
         -webkit-box-shadow: 0px 0px 0 0 #3b3c3e;
         box-shadow: 0px 0px 0 0 #3b3b3e;
         transform: scale(1.05);
+    }
+    .ferramentas-copy {
+        height: 0;
+        opacity: 0;
+    }
+    
+    .ferramentas-image {
+        margin-bottom: 1000px;
     }
 
     .services {
